# tigres

./: .env.example  .gitignore  README.md  categories.txt  metasketch.db  plantilla.txt  pyproject.toml  template.md  test.db
.github/: copilot-instructions.md
Documentacion/: Documento_de_Analisis_Funcional_Metasketch_v2_actualizado.docx  Prompt_VisualCode_v1.txt
app/: __init__.py  __main__.py  config.py  logging.py  main.py
app/api/: __init__.py  auth.py  chat.py  chatbot.py  content_tree.py  documents.py  documents_download.py  main_views.py  markdown.py  markdown_editor.py  ping.py  router.py  vector.py
app/auth/: dependencies.py  jwt.py
app/db/: __init__.py
app/middleware/: __init__.py
app/models/: chatbot.py  user.py
app/services/: openai_service.py  vector_store.py
app/utils/: hashing.py
static/: expand_markdown_panel.js  expand_markdown_panel_main.js
templates/: base.html  chat_assistant.html  content_tree.html  document_detail.html  document_list.html  documents_upload.html  index.html  login.html  markdown_editor.html  metasketch.html  modal_success.html
templates/auth/: login.html
templates/chatbot/: index.html
templates/content_tree/: index.html
templates/documents/: list.html
templates/markdown_editor/: index.html
